{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 65,
  "lineage": "34f2b243-b896-f5b1-4265-fbfcd718784d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "rds_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:146894600624:security-group/sg-0a926d5a1862cac9b",
            "description": "EKS created security group applied to ENI that is attached to EKS Control Plane master nodes, as well as any managed workloads.",
            "filter": null,
            "id": "sg-0a926d5a1862cac9b",
            "name": "eks-cluster-sg-cluster-872092154",
            "tags": {
              "Name": "eks-cluster-sg-cluster-872092154",
              "kubernetes.io/cluster/cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbd18fd4bcabe0b1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-01a49bc9aa7634750",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:146894600624:subnet/subnet-01a49bc9aa7634750",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.64.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a49bc9aa7634750",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "146894600624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0f52b5c60c1c34d27"
          }
        },
        {
          "index_key": "subnet-0253f24f45b25fe4a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:146894600624:subnet/subnet-0253f24f45b25fe4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.48.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0253f24f45b25fe4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "146894600624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0f52b5c60c1c34d27"
          }
        },
        {
          "index_key": "subnet-0c16faf7a4af6a659",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:146894600624:subnet/subnet-0c16faf7a4af6a659",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c16faf7a4af6a659",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "146894600624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0f52b5c60c1c34d27"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:146894600624:vpc/vpc-0bbd18fd4bcabe0b1",
            "cidr_block": "10.110.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f935620330244fbe",
                "cidr_block": "10.110.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0f3c6f714816180b9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bbd18fd4bcabe0b1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a41ea96372d8849d",
            "owner_id": "146894600624",
            "tags": {
              "Environment": "us-east-1",
              "Name": "ez-us-east-1-dev-vpc",
              "Namespace": "ez",
              "Owner": "146894600624",
              "Stage": "dev",
              "Terraform": "vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.rds_cluster_aurora_postgres",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:146894600624:security-group/sg-0e2804c737e932e05",
            "description": "Allow inbound traffic from Security Groups and CIDRs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2804c737e932e05",
            "ingress": [],
            "name": "ez-dev-postgres",
            "name_prefix": "",
            "owner_id": "146894600624",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ez-dev-postgres",
              "Namespace": "ez",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "ez-dev-postgres",
              "Namespace": "ez",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f52b5c60c1c34d27"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.rds_cluster_aurora_postgres",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow outbound traffic",
            "from_port": 0,
            "id": "sgrule-696568779",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e2804c737e932e05",
            "security_group_rule_id": "sgr-0d76a8c2f3d9ee185",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds_cluster_aurora_postgres.aws_security_group.default"
          ]
        }
      ]
    }
  ]
}